#2574 Fix compiling issue - use Apache's FileUtils